manifests/registry/deployment/local-testing/multitenant-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: apicurio-registry
  name: multitenant-ui-ingress
spec:
  rules:
  - host: mt-ui.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: apicurio-registry-mt-ui-mt
            port:
              number: 8080
        path: /
        pathType: Prefix
